syntax = "proto3";
package comdex.tokenmint.v1beta1;
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/tokenmint/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

service Msg {
    
    rpc MsgMintNewTokens(MsgMintNewTokensRequest) returns (MsgMintNewTokensResponse);
    rpc MsgBurnHarborTokens(MsgBurnHarborTokensRequest) returns (MsgBurnHarborTokensResponse);
}
//Will become governance proposal- will trigger token minting & sending
message MsgMintNewTokensRequest {
    string from    = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
    uint64 app_id   = 2 [(gogoproto.moretags) = "yaml:\"app_id\"",
    (gogoproto.customname) = "AppId"];
    uint64 asset_id = 3 [
      (gogoproto.moretags)   = "yaml:\"asset_id\""
    ];
}
message MsgMintNewTokensResponse{}

message MsgBurnHarborTokensRequest {
  string from    = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
  uint64 app_id   = 2 [(gogoproto.moretags) = "yaml:\"app_id\"",
    (gogoproto.customname) = "AppId"];
  cosmos.base.v1beta1.Coin burn_coins = 3
    [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}
message MsgBurnHarborTokensResponse{}